@@ -1,5 +1,8 @@
 This file documents the revision history for the SNClient+ agent.
 
+next:
+         - fix using arguments in aliased checks (#69)
+
 0.15     Fri Dec 15 23:31:08 CET 2023
          - improve counter memory consumption
          - change internal wmi library
